@@ -116,6 +116,7 @@ namespace MySql.Data.MySqlClient
 			int index = items.Add(value);
 			hash.Add(value.ParameterName, index);
 			ciHash.Add(value.ParameterName, index);
+            value.Collection = this;
 			return value;
 		}
 
@@ -285,6 +286,8 @@ namespace MySql.Data.MySqlClient
 		/// </summary>
 		public override void Clear()
 		{
+            foreach (MySqlParameter p in items)
+                p.Collection = null;
 			items.Clear();
 			hash.Clear();
 			ciHash.Clear();
@@ -422,6 +425,7 @@ namespace MySql.Data.MySqlClient
             MySqlParameter p = (value as MySqlParameter);
             hash.Remove(p.ParameterName);
             ciHash.Remove(p.ParameterName);
+            p.Collection = null;
             if (p.Direction == ParameterDirection.ReturnValue)
                 returnParameterIndex = -1;
 		}
@@ -458,5 +462,15 @@ namespace MySql.Data.MySqlClient
 
 		#endregion
 
+        internal void ParameterNameChanged(MySqlParameter p, string oldName, string newName)
+        {
+            if (p.Direction == ParameterDirection.ReturnValue)
+                return;
+            int index = IndexOf(oldName);
+            hash.Remove(oldName);
+            ciHash.Remove(oldName);
+            hash.Add(newName, index);
+            ciHash.Add(newName, index);
+        }
 	}
 }
