@@ -7,6 +7,8 @@ Version 5.0.4
   Other changes
   -------------
   Return parameters created with DeriveParameters now have the name RETURN_VALUE
+  Fixed problem with parameter name hashing where the hashes were not getting updated
+       or removed in certain situations.
 
 Version 5.0.3 12-31-2006
 
